<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyStopTimer">

    <ImageView
        android:id="@+id/go_back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="fitCenter"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_red_arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/blackCol"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/app_name2"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/whiteCol"
            android:textSize="25sp" />

        <Chronometer
            android:id="@+id/myChrono"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/whiteCol"
            android:textSize="80sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exercises"
        android:textColor="@color/blackCol"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ScrollView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:foregroundGravity="center"
        android:orientation="vertical"
        >
        <!-- Complete layout of ScrollView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <!-- First Line -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Exercise1"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:imeOptions="actionDone"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"

                    >

                    <com.animsh.animatedcheckbox.AnimatedCheckBox
                        android:id="@+id/primerCheckbox"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox
                        android:id="@+id/segundoCheckbox"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox
                        android:id="@+id/tercerCheckbox"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox
                        android:id="@+id/cuartoCheckbox"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                </LinearLayout>

            </LinearLayout>

            <!-- Second Line -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Exercise2"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:imeOptions="actionDone"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"

                    >

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                </LinearLayout>

            </LinearLayout>

            <!-- Third Line -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Exercise3"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:imeOptions="actionDone"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"

                    >

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                </LinearLayout>

            </LinearLayout>

            <!-- Fourth Line -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Exercise4"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:imeOptions="actionDone"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"

                    >

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                    <com.animsh.animatedcheckbox.AnimatedCheckBox

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:border_stroke_width="2dp"
                        app:color_checked="@color/colorPrimary"
                        app:color_tick="@color/whiteCol"
                        app:color_unchecked="@color/whiteCol"
                        app:color_unchecked_stroke="@color/colorPrimary"
                        app:small_tick="true"
                        app:tick_stroke_width="1dp"
                        />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>